src/test/deca/context/valid/op_un_minus_float.deca
// Description :
// test du moins unaire sur un flottant
//
// Résultats :
// ok

{
  float y;
  y = -3.0;
}
